Fix loupe overflowing on Firefox
Firefox doesn't seem to apply the border radius to top layer canvases
unless they have `contain: paint`

The single component "wave" canvas also overflows without this fix, but
is less obvious.

--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ body {
   border: 4px solid var(--border-colour);
   border-radius: 12px;
   box-sizing: border-box;
+
+  overflow: hidden;
+  contain: paint;
 }
 
 .output.round {
